updates to pages

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,7 @@ html, body {
 }
 
 #wedding_party {
-  background: url(../images/beach.jpg) no-repeat center center fixed; 
+  background: url(../images/myface2.jpg) no-repeat center center fixed; 
   display: table;
   height: 800px;
   position: relative;
@@ -138,6 +138,7 @@ html, body {
 }
 #rsvp .panel {
   opacity: 0.85;
+  color: black;
 }
 
 #google_map {
