--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ html, body {
 
 /* additional sections */
 #welcome {
-  background: url(../images/wolf.jpg) no-repeat center center fixed; 
+  background: url(../images/sand-walk.jpg) no-repeat center center fixed; 
   display: table;
   height: 100%;
   position: relative;
@@ -46,11 +46,18 @@ html, body {
 
 
 
-#when_and_where {
+#when_and_where p{
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 21px;
+  font-weight: 300;
+}
+
+#when_and_where h2{
+  
 }
 
 #wedding_party {
-  background: url(../images/myface2.jpg) no-repeat center center fixed; 
+  background: url(../images/sand.jpg) no-repeat center center fixed; 
   display: table;
   height: 800px;
   position: relative;
@@ -176,21 +183,31 @@ html, body {
 #make_a_weekend_of_it .glyphicon {
   background: url(../images/crossley.jpg) 48% 15%;
   border: 2px solid #FFFFFF;
-  border-radius: 50%;
+  border-radius: 17%;
   display: inline-block;
   font-size: 60px;
   height: 140px;
   line-height: 140px;
   text-align: center;
   vertical-align: middle;
-  width: 140px;
+  width: 210px;
 }
 
-#make_a_weekend_of_it {
-	
+#make_a_weekend_of_it .glyphicon.whitby {
+	background: url(../images/whitby.jpg) 28% 15%;
 }
 
+#make_a_weekend_of_it .glyphicon.skelton {
+	background: url(../images/skelton.jpg) 30% 15%;
+}
 
+#make_a_weekend_of_it .glyphicon.goathland {
+	background: url(../images/whitby.jpg) 28% 15%;
+}
+
+#make_a_weekend_of_it .glyphicon.rosedale {
+	background: url(../images/skelton.jpg) 30% 15%;
+}
 
 #rsvp {
   background-color: #306d9f;
@@ -208,10 +225,56 @@ html, body {
 
 #rsvp form input {
   display:block;
+  margin: 0 auto;
+}
+
+#rsvp form input[type='text'], #rsvp form textarea {
+  margin:10px;
+}
+
+input.parsley-success,
+select.parsley-success,
+textarea.parsley-success {
+  color: #468847;
+  background-color: #DFF0D8;
+  border: 1px solid #D6E9C6;
+}
+
+input.parsley-error,
+select.parsley-error,
+textarea.parsley-error {
+  color: #B94A48;
+  background-color: #F2DEDE;
+  border: 1px solid #EED3D7;
+}
+
+.parsley-errors-list {
+  margin: 2px 0 3px 0;
+  padding: 0;
+  list-style-type: none;
+  font-size: 0.9em;
+  line-height: 0.9em;
+  opacity: 0;
+  -moz-opacity: 0;
+  -webkit-opacity: 0;
+
+  transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  -ms-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+}
+
+.parsley-errors-list.filled {
+  opacity: 1;
 }
 
 #rsvp form .form_radio input, #rsvp form input[type='submit'] {
   display: inline-block;
+}
+
+#rsvp #already_rsvp{
+  display: none;
 }
 
 #google_map {
